feat--lambda authorizer tests

--- a/infrastructure/resources/api-gateway-lambda.yaml
+++ b/infrastructure/resources/api-gateway-lambda.yaml
@@ -90,6 +90,8 @@ Resources:
             RequestParameters:
               - method.request.querystring.residentId:
                   Required: false
+            Auth:
+              Authorizer: LambdaAuthorizer
 
   getPermissionsFunction:
     Type: AWS::Serverless::Function
@@ -157,6 +159,8 @@ Resources:
             RequestParameters:
               - method.request.querystring.residentId:
                   Required: false
+            Auth:
+              Authorizer: LambdaAuthorizer
 
   getVisitorByIdFunction:
     Type: AWS::Serverless::Function
