--- a/infrastructure/resources/api-gateway-lambda.yaml
+++ b/infrastructure/resources/api-gateway-lambda.yaml
@@ -55,6 +55,7 @@ Resources:
           POLICY_STORE_ID: !ImportValue VisitorManagementPolicyStore
           COGNITO_USER_POOL_ID: !ImportValue CognitoUserPool
           COGNITO_CLIENT_ID: !ImportValue CognitoUserPoolClient
+          APP_FRONTEND_BASE_URL: !Sub "https://${SubDomain}"
 
   getVisitorsFunction:
     Type: AWS::Serverless::Function
