--- a/infrastructure/resources/api-gateway-lambda.yaml
+++ b/infrastructure/resources/api-gateway-lambda.yaml
@@ -86,6 +86,8 @@ Resources:
             RequestParameters:
               - method.request.querystring.residentId:
                   Required: false
+            Auth:
+              Authorizer: LambdaAuthorizer
 
   getPermissionsFunction:
     Type: AWS::Serverless::Function
