put visitor lambda authorizer

--- a/infrastructure/resources/api-gateway-lambda.yaml
+++ b/infrastructure/resources/api-gateway-lambda.yaml
@@ -277,8 +277,7 @@ Resources:
             Method: POST
             RestApiId: !Ref ApiGatewayApi
             Auth:
-              # Authorizer: LambdaAuthorizer
-              Authorizer: NONE
+              Authorizer: LambdaAuthorizer
 
   putInviteLinkFunction:
     Type: AWS::Serverless::Function
