--- a/infrastructure/resources/api-gateway-lambda.yaml
+++ b/infrastructure/resources/api-gateway-lambda.yaml
@@ -308,7 +308,7 @@ Resources:
             Method: POST
             RestApiId: !Ref ApiGatewayApi
             Auth:
-              Authorizer: LambdaAuthorizer
+              Authorizer: NONE
 
   putVisitRequestFunction:
     Type: AWS::Serverless::Function
