--- a/infrastructure/resources/ses-notification.yaml
+++ b/infrastructure/resources/ses-notification.yaml
@@ -16,11 +16,10 @@ Resources:
         SubjectPart: "Your visitor has arrived!"
         TextPart: "Hello {{name}},\n\nYour visitor {{visitor_name}} has arrived at the gate."
         HtmlPart: "<h1>Hello {{name}},</h1><p>Your visitor <b>{{visitor_name}}</b> has arrived at the gate.</p>"
-
-Outputs:
-  VisitorManagementSESIdentityArn:
-    Description: ARN of the SES verified sender identity
-    Value: !GetAtt VisitorManagementSESIdentity.Arn
-  VisitorManagementSESTemplateName:
-    Description: Name of the SES template for visitor arrival
-    Value: VisitorArrivalNotification
+# Outputs:
+#   VisitorManagementSESIdentityArn:
+#     Description: ARN of the SES verified sender identity
+#     Value: !GetAtt VisitorManagementSESIdentity.Arn
+#   VisitorManagementSESTemplateName:
+#     Description: Name of the SES template for visitor arrival
+#     Value: VisitorArrivalNotification
