--- a/infrastructure/resources/record-sets.yaml
+++ b/infrastructure/resources/record-sets.yaml
@@ -25,6 +25,7 @@ Resources:
     Type: AWS::Route53::RecordSet
     Properties:
       HostedZoneId: !Ref HostedZoneId
+      Name: "@"
       Type: MX
       TTL: 3600
       ResourceRecords:
@@ -35,6 +36,7 @@ Resources:
     Type: AWS::Route53::RecordSet
     Properties:
       HostedZoneId: !Ref HostedZoneId
+      Name: "@"
       Type: TXT
       TTL: 3600
       ResourceRecords:
@@ -44,6 +46,7 @@ Resources:
     Type: AWS::Route53::RecordSet
     Properties:
       HostedZoneId: !Ref HostedZoneId
+      Name: "@"
       Type: TXT
       TTL: 3600
       ResourceRecords:
